--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-slate-50 min-h-screen p-6 font-sans">
   <div class="max-w-4xl mx-auto">
     <header class="mb-6">
-      <h1 class="text-2xl font-semibold">Akses Share — Quick Launcher</h1>
+      <h1 class="text-2xl font-semibold">SD PLUS DARUSSALAM</h1>
       <p class="text-sm text-slate-600">Halaman single-file untuk menyimpan alamat share, membuat perintah Windows+R, dan menyalin link cepat.</p>
     </header>
 
@@ -154,3 +154,4 @@
   </script>
 </body>
 </html>
+
