--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         {name:'MUHAMMAD KEVIN EKO WAHONO', path:'https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?usp=sf_link&entry.91861699=MUHAMMAD+KEVIN+EKO+WAHONO&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=0142426028&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur'},
         {name:'MUHAMMAD NABIL SYAFIQ RAMADHAN', path:'https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?usp=sf_link&entry.91861699=MUHAMMAD+NABIL+SYAFIQ+RAMADHAN&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=0137591248&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur'},
         {name:'RAZIQ HANAN', path:'https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?usp=sf_link&entry.91861699=RAZIQ+HANAN&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=0138211828&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur'}
+        {name:'ALMER DANISWARA MAHARDIKA	', pathhttps://docs.google.com/forms/d/e/1FAIpQLSe4_b5Y5W3k-aXYH0oQJUXPMsezwEJWG40KINPjyobb82ls9Q/viewform?usp=sf_link&entry.91861699=ALMER+DANISWARA+MAHARDIKA&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=3180917871&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur}
       ];
 
     const nameEl = document.getElementById('name');
@@ -154,4 +155,5 @@
   </script>
 </body>
 </html>
+
 
