--- a/index.html
+++ b/index.html
@@ -1,84 +1,269 @@
-<!doctype html><!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CRUD + Import Excel</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <style>
-    body {font-family: Arial; padding: 20px;}
-    input, button {margin: 5px; padding: 6px;}
-    table {border-collapse: collapse; margin-top: 20px; width: 100%;}
-    table, th, td {border: 1px solid #000; padding: 8px;}
-  </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Akses Share — Quick Launcher</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h2>Tambah Data</h2>
-  <input id="nama" placeholder="Nama" />
-  <input id="alamat" placeholder="Alamat" />
-  <button onclick="tambahData()">Tambah</button>
+<body class="bg-slate-50 min-h-screen p-6 font-sans">
+  <div class="max-w-4xl mx-auto">
+    <header class="mb-6">
+      <h1 class="text-2xl font-semibold">SD PLUS DARUSSALAM</h1>
+      <p class="text-sm text-slate-600">Halaman single-file untuk menyimpan alamat share, membuat perintah Windows+R, dan menyalin link cepat.</p>
+    </header>
 
-  <h3>Import Dari Excel</h3>
-  <input type="file" id="fileExcel" />
-  <button onclick="importExcel()">Import</button>
+    <main class="bg-white shadow rounded-lg p-6">
+      <section class="mb-6">
+        <label class="block text-sm font-medium text-slate-700 mb-2">Tambah resource</label>
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-3">
+          <input id="name" placeholder="Nama (contoh: File Server)" class="col-span-2 p-2 border rounded" />
+          <input id="path" placeholder="Path (contoh: \SERVER\share atau https://...)" class="p-2 border rounded" />
+        </div>
+        <div class="mt-3 flex gap-2">
+          <button id="addBtn" class="px-4 py-2 bg-slate-800 text-white rounded">Tambah</button>
+          <button id="loadSample" class="px-4 py-2 border rounded">Load contoh</button>
+          <button id="exportBtn" class="px-4 py-2 border rounded">Export JSON</button>
+        </div>
+      </section>
 
-  <table id="tabel">
-    <thead>
-      <tr><th>Nama</th><th>Alamat</th></tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+      <section class="mb-4">
+        <input id="search" placeholder="Cari nama..." class="w-full p-2 border rounded mb-4" />
+        <h2 class="text-lg font-medium mb-3">Daftar resource</h2>
+        <div id="list" class="space-y-3"></div>
+      </section>
+
+      <template id="itemTpl">
+        <div class="flex items-start justify-between p-3 border rounded">
+          <div>
+            <div class="font-medium name"></div>
+          </div>
+          <div class="flex gap-2 ml-4">
+            <button class="copyBtn px-3 py-1 border rounded text-sm">Salin</button>
+            <button class="openBtn px-3 py-1 bg-slate-800 text-white rounded text-sm">Buka</button>
+            <button class="delBtn px-3 py-1 text-red-600">Hapus</button>
+          </div>
+        </div>
+      </template>
+    </main>
+
+    <footer class="text-sm text-slate-500 mt-4">
+      Petunjuk: Untuk membuka share di Windows lewat <span class="font-mono">Win+R</span>, tekan Win+R lalu paste perintah yang disalin.
+      Untuk path UNC gunakan format <span class="font-mono">\\SERVER\share</span>.
+      Jika ingin menjalankan lewat explorer gunakan <span class="font-mono">explorer.exe \SERVER\share</span>.
+    </footer>
+  </div>
 
 <script>
-  // Simpan data ke localStorage agar tidak hilang saat refresh
-  function loadData() {
-    const data = JSON.parse(localStorage.getItem('database') || '[]');
-    const tbody = document.querySelector('#tabel tbody');
-    tbody.innerHTML = '';
-    data.forEach(item => {
-      const row = `<tr><td>${item.nama}</td><td>${item.alamat}</td></tr>`;
-      tbody.innerHTML += row;
-    });
-  }
+let resources = [
+  {name:'AKIFA NAILA DZAKIRA AFTANI', path:'https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?entry.91861699=AKIFA+NAILA+DZAKIRA+AFTANI&entry.851575806=20575898&entry.664715575=Perempuan&entry.1823044574=Islam&entry.1842700653=0141802485&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur'},
+  {name:'FAEYZA GHANIYA PUTRI MELDA', path:'https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?entry.91861699=FAEYZA+GHANIYA+PUTRI+MELDA&entry.851575806=20575898&entry.664715575=Perempuan&entry.1823044574=Islam&entry.1842700653=0135167724&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur'},
+  {name:'FAUZIAN REZA MAHARDIKA', path:'https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?entry.91861699=FAUZIAN+REZA+MAHARDIKA&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=0146238886&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur'},
 
-  function tambahData() {
-    const nama = document.getElementById('nama').value;
-    const alamat = document.getElementById('alamat').value;
-    if (!nama || !alamat) return;
+  {name:'ALMER DANISWARA MAHARDIKA', path:'https://docs.google.com/forms/d/e/1FAIpQLSe4_b5Y5W3k-aXYH0oQJUXPMsezwEJWG40KINPjyobb82ls9Q/viewform?usp=sf_link&entry.91861699=ALMER+DANISWARA+MAHARDIKA&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=3180917871&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur'}
+];
 
-    const data = JSON.parse(localStorage.getItem('database') || '[]');
-    data.push({ nama, alamat });
-    localStorage.setItem('database', JSON.stringify(data));
-    loadData();
-  }
+const nameEl = document.getElementById('name');
+const pathEl = document.getElementById('path');
+const addBtn = document.getElementById('addBtn');
+const listEl = document.getElementById('list');
+const tpl = document.getElementById('itemTpl');
 
-  function importExcel() {
-    const file = document.getElementById('fileExcel').files[0];
-    if (!file) return;
+function normalizeRunCmd(p) {
+  if (!p) return '';
+  if (/^https?:\/\//i.test(p)) return p;
+  if (/^\\/.test(p)) return p;
+  return 'explorer.exe ' + p;
+}
 
-    const reader = new FileReader();
-    reader.onload = function(e) {
-      const workbook = XLSX.read(e.target.result, { type: 'binary' });
-      const sheet = workbook.Sheets[workbook.SheetNames[0]];
-      const json = XLSX.utils.sheet_to_json(sheet);
+function render() {
+  listEl.innerHTML = '';
+  const search = document.getElementById('search').value.toLowerCase();
 
-      const data = JSON.parse(localStorage.getItem('database') || '[]');
+  resources.filter(r => r.name.toLowerCase().includes(search)).forEach((r, idx) => {
+    const node = tpl.content.cloneNode(true);
+    node.querySelector('.name').textContent = r.name || '—';
 
-      json.forEach(row => {
-        if (row.Nama && row.Alamat) {
-          data.push({ nama: row.Nama, alamat: row.Alamat });
-        }
+    const cmd = normalizeRunCmd(r.path);
+    const copyBtn = node.querySelector('.copyBtn');
+    const openBtn = node.querySelector('.openBtn');
+    const delBtn = node.querySelector('.delBtn');
+
+    copyBtn.addEventListener('click', () => {
+      navigator.clipboard.writeText(cmd).then(()=>{
+        copyBtn.textContent = 'Tersalin';
+        setTimeout(()=> copyBtn.textContent = 'Salin', 1200);
       });
+    });
 
-      localStorage.setItem('database', JSON.stringify(data));
-      loadData();
-    };
-    reader.readAsBinaryString(file);
-  }
+    openBtn.addEventListener('click', () => {
+      if (/^https?:\/\//i.test(r.path)) window.open(r.path, '_blank');
+      else alert('Di Windows: tekan Win+R lalu paste perintah yang disalin.');
+    });
 
-  loadData();
+    delBtn.addEventListener('click', () => {
+      resources.splice(idx, 1);
+      render();
+    });
+
+    listEl.appendChild(node);
+  });
+}
+
+document.getElementById('addBtn').addEventListener('click', () => {
+  const name = nameEl.value.trim();
+  const path = pathEl.value.trim();
+  if (!path) return alert('Masukkan path atau URL');
+  resources.push({ name, path });
+  nameEl.value = '';
+  pathEl.value = '';
+  render();
+});
+
+document.getElementById('search').addEventListener('input', render);
+render();
+</script>
+
+</body>
+</html><!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Akses Share — Quick Launcher</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-slate-50 min-h-screen p-6 font-sans">
+<div class="max-w-4xl mx-auto">
+<header class="mb-6">
+  <h1 class="text-2xl font-semibold">SD PLUS DARUSSALAM</h1>
+  <p class="text-sm text-slate-600">Halaman single-file untuk menyimpan alamat share, membuat perintah Windows+R, dan menyalin link cepat.</p>
+</header>
+
+<main class="bg-white shadow rounded-lg p-6">
+<section class="mb-6">
+  <label class="block text-sm font-medium text-slate-700 mb-2">Tambah resource</label>
+  <div class="grid grid-cols-1 sm:grid-cols-3 gap-3">
+    <input id="name" placeholder="Nama" class="col-span-2 p-2 border rounded" />
+    <input id="path" placeholder="Path atau URL" class="p-2 border rounded" />
+  </div>
+  <div class="mt-3 flex gap-2">
+    <button id="addBtn" class="px-4 py-2 bg-slate-800 text-white rounded">Tambah</button>
+    <button id="loadSample" class="px-4 py-2 border rounded">Load contoh</button>
+    <button id="exportBtn" class="px-4 py-2 border rounded">Export JSON</button>
+  </div>
+</section>
+
+<section class="mb-4">
+  <input id="search" placeholder="Cari nama..." class="w-full p-2 border rounded mb-4" />
+  <h2 class="text-lg font-medium mb-3">Daftar resource</h2>
+  <div id="list" class="space-y-3"></div>
+</section>
+
+<template id="itemTpl">
+  <div class="flex items-start justify-between p-3 border rounded">
+    <div><div class="font-medium name"></div></div>
+    <div class="flex gap-2 ml-4">
+      <button class="copyBtn px-3 py-1 border rounded text-sm">Salin</button>
+      <button class="openBtn px-3 py-1 bg-slate-800 text-white rounded text-sm">Buka</button>
+      <button class="delBtn px-3 py-1 text-red-600">Hapus</button>
+    </div>
+  </div>
+</template>
+</main>
+
+<footer class="text-sm text-slate-500 mt-4">
+  Petunjuk: Gunakan Win+R lalu paste perintah. UNC: \\SERVER\share.
+</footer>
+</div>
+
+<script>
+let resources = [
+  {name:"AKIFA NAILA DZAKIRA AFTANI", path:"https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?entry.91861699=AKIFA+NAILA+DZAKIRA+AFTANI&entry.851575806=20575898&entry.664715575=Perempuan&entry.1823044574=Islam&entry.1842700653=0141802485&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur"},
+  {name:"FAEYZA GHANIYA PUTRI MELDA", path:"https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?entry.91861699=FAEYZA+GHANIYA+PUTRI+MELDA&entry.851575806=20575898&entry.664715575=Perempuan&entry.1823044574=Islam&entry.1842700653=0135167724&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur"},
+  {name:"FAUZIAN REZA MAHARDIKA", path:"https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?entry.91861699=FAUZIAN+REZA+MAHARDIKA&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=0146238886&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur"},
+  {name:"NASYIFA IKA AZZAHRA", path:"https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?usp=sf_link&entry.91861699=NASYIFA+IKA+AZZAHRA&entry.851575806=20575898&entry.664715575=Perempuan&entry.1823044574=Islam&entry.1842700653=0142810317&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur"},
+  {name:"RAZIQ HANAN", path:"https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?usp=sf_link&entry.91861699=RAZIQ+HANAN&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=0138211828&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur"},
+
+  // ===== Tambahan dari kamu =====
+  {name:"ALMER DANISWARA MAHARDIKA", path:"https://docs.google.com/forms/d/e/1FAIpQLSe4_b5Y5W3k-aXYH0oQJUXPMsezwEJWG40KINPjyobb82ls9Q/viewform?usp=sf_link&entry.91861699=ALMER+DANISWARA+MAHARDIKA&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=3180917871&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur"}
+];
+
+const nameEl = document.getElementById('name');
+const pathEl = document.getElementById('path');
+const addBtn = document.getElementById('addBtn');
+const listEl = document.getElementById('list');
+const tpl = document.getElementById('itemTpl');
+const loadSample = document.getElementById('loadSample');
+const exportBtn = document.getElementById('exportBtn');
+
+function normalizeRunCmd(p){
+  if(!p) return "";
+  if(/^https?:\/\//i.test(p)) return p;
+  if(/^\\\\/.test(p)) return p;
+  return "explorer.exe " + p;
+}
+
+function render(){
+  listEl.innerHTML = "";
+  const s = document.getElementById('search').value.toLowerCase();
+  resources.filter(r=>r.name.toLowerCase().includes(s)).forEach((r,i)=>{
+    const n = tpl.content.cloneNode(true);
+    n.querySelector('.name').textContent = r.name;
+    const cmd = normalizeRunCmd(r.path);
+
+    n.querySelector('.copyBtn').addEventListener('click', ()=>{
+      navigator.clipboard.writeText(cmd).then(()=>{
+        const b = n.querySelector('.copyBtn');
+        b.textContent = 'Tersalin';
+        setTimeout(()=> b.textContent='Salin', 1200);
+      });
+    });
+
+    n.querySelector('.openBtn').addEventListener('click', ()=>{
+      if(/^https?:\/\//i.test(r.path)) window.open(r.path,'_blank');
+      else alert('Gunakan Win+R lalu paste perintah.');
+    });
+
+    n.querySelector('.delBtn').addEventListener('click', ()=>{
+      resources.splice(i,1);
+      render();
+    });
+
+    listEl.appendChild(n);
+  });
+}
+
+addBtn.addEventListener('click', ()=>{
+  const name = nameEl.value.trim();
+  const path = pathEl.value.trim();
+  if(!path) return alert('Masukkan path/URL');
+  resources.push({name, path});
+  nameEl.value = '';
+  pathEl.value = '';
+  render();
+});
+
+document.getElementById('search').addEventListener('input', render);
+loadSample.addEventListener('click', ()=>{
+  resources = [
+    {name:'File Server', path:'\\\\NAS01\\Publik'},
+    {name:'Internal Web', path:'https://intranet.example.local'},
+    {name:'Share Guru', path:'\\\\192.168.1.50\\guru'}
+  ]; render();
+});
+
+exportBtn.addEventListener('click', ()=>{
+  const blob = new Blob([JSON.stringify(resources,null,2)], {type:'application/json'});
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement('a');
+  a.href = url;
+  a.download = 'resources.json';
+  document.body.appendChild(a); a.click(); a.remove();
+  URL.revokeObjectURL(url);
+});
+
+render();
 </script>
 </body>
 </html>
-
-
