--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
         {name:'KHAYLA AZZAHRA ALFATIA', path:'https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?usp=sf_link&entry.91861699=KHAYLA+AZZAHRA+ALFATIA&entry.851575806=20575898&entry.664715575=Perempuan&entry.1823044574=Islam&entry.1842700653=0137209416&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur'},
         {name:'MUHAMMAD KEVIN EKO WAHONO', path:'https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?usp=sf_link&entry.91861699=MUHAMMAD+KEVIN+EKO+WAHONO&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=0142426028&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur'},
         {name:'MUHAMMAD NABIL SYAFIQ RAMADHAN', path:'https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?usp=sf_link&entry.91861699=MUHAMMAD+NABIL+SYAFIQ+RAMADHAN&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=0137591248&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur'},
-        {name:'RAZIQ HANAN', path:'https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?usp=sf_link&entry.91861699=RAZIQ+HANAN&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=0138211828&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur'}
-        const data = [
+        {name:'RAZIQ HANAN', path:'https://docs.google.com/forms/d/e/1FAIpQLScWI_LxaAH71Xk3pBvNiLuxy-x3BIkAJfUXceg4qCy1-Kv2YA/viewform?usp=sf_link&entry.91861699=RAZIQ+HANAN&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=0138211828&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur'},
   { name: "ALMER DANISWARA MAHARDIKA", url: "https://docs.google.com/forms/d/e/1FAIpQLSe4_b5Y5W3k-aXYH0oQJUXPMsezwEJWG40KINPjyobb82ls9Q/viewform?usp=sf_link&entry.91861699=ALMER+DANISWARA+MAHARDIKA&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=3180917871&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur" },
 
   { name: "ARFAN MISDAQ MU'TASHIM SETIAWAN", url: "https://docs.google.com/forms/d/e/1FAIpQLSe4_b5Y5W3k-aXYH0oQJUXPMsezwEJWG40KINPjyobb82ls9Q/viewform?usp=sf_link&entry.91861699=ARFAN+MISDAQ+MU%27TASHIM+SETIAWAN&entry.851575806=20575898&entry.664715575=Laki-laki&entry.1823044574=Islam&entry.1842700653=3195386755&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur" },
@@ -133,8 +132,6 @@
 
   { name: "SYAUQINA MAULIDA ARDHIANI", url: "https://docs.google.com/forms/d/e/1FAIpQLSe4_b5Y5W3k-aXYH0oQJUXPMsezwEJWG40KINPjyobb82ls9Q/viewform?usp=sf_link&entry.91861699=SYAUQINA+MAULIDA+ARDHIANI&entry.851575806=20575898&entry.664715575=Perempuan&entry.1823044574=Islam&entry.1842700653=3152598654&entry.1775251487=Kab.+Ngawi+-+Prov.+Jawa+Timur" },
 ];
-
-      ];
 
     const nameEl = document.getElementById('name');
     const pathEl = document.getElementById('path');
@@ -218,4 +215,5 @@
   </script>
 </body>
 </html>
+
 
